<resources>
    <string name="app_name" translatable="false">Word Teacher</string>
    <string name="Start">Start</string>
    <string name="dictionary_name">Dictionary name</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning of the word</string>
    <string name="not_fields_filled">Not all required fields are filled</string>
    <string name="name_is_empty">Dictionary name is empty</string>
    <string name="word_image">Word image</string>
    <string name="add_word">Add word</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="image">Image</string>
    <string name="word_annotation">Word:</string>
    <string name="meaning_annotation">Meaning:</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="add_dictionary">Add dictionary</string>
    <string name="no_dictionary_selected">No dictionary selected</string>
    <string name="delete_image">Delete image</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="import_dictionary">Import dictionary</string>
    <string name="learning">Learning</string>
    <string name="time">Time</string>
    <string name="timer">Timer</string>
    <string name="wrong_word_move">Wrong word move</string>
    <string name="right_words_to_memorization">Right words to memorization</string>
    <string name="export">Export</string>
    <string name="file_extension_is_invalid">File extension is invalid</string>
    <string name="word_count">"Word count"</string>
    <string name="dictionary__name__has_been_saved">Dictionary \"%s\" has been saved</string>
    <string name="dictionary__name__has_not_been_saved">Dictionary \"%s\" has not been saved</string>
    <string name="permission_not_received">Permission not received</string>
    <string name="time__int_">Time: %d</string>
    <string name="words_learned__int_">Words learned: %d</string>
    <string name="right_answers__int_">Right answers: %d</string>
    <string name="wrong_answers__int_">Wrong answers: %d</string>
    <string name="finish">Finish</string>
    <string name="result_display">Result display</string>
</resources>